<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">icePAK</string>
    <string name="hello_world">Hello world!</string>

    <!-- Start Activity -->
    <string name="action_settings">Settings</string>
    <string name="import_ccd">Import Data</string>
    <string name="visualization">Visualization</string>
    <string name="autoImportData">Auto Import Data</string>

    <!-- Settings -->
    <string name="send_feedback">Send Feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_app">icePAK is focused on vaccine cold chain
        management in Pakistan. Its goal is to integrate large amounts of
        data into easily consumable forms, enabling decision makers and
        managers to allocate resources effectively. High visibility of problem
        areas and automated allocation recommendations, allows these at risk
        locations to recognised early and dealt with efficiently.</string>

    <!-- Exploration -->
    <string name="exploration">Exploration</string>
    <string name="facility_list">Facility List</string>

    <!-- Simulation Factors -->
    <string name="count">Count</string>
    <string name="fridge">Fridge</string>
    <string name="fridges">Fridges</string>
    <string name="new_fridge">New Fridge</string>
    <string name="new_fridges">NEW REFRIGERATORS</string>
    <string name="immunization_plan">Immunization Plan:</string>
    <string name="immunization_plans">IMMUNIZATION PLANS</string>

    <!-- Simulation -->
    <string name="simulation">Simulation</string>
    <string name="create_scenario">Create Scenario</string>
    <string name="create_immunization_plan">Create Immunization Plan</string>
    <string name="new_scenario">New Scenario</string>
    <string name="load_scenario">Load Scenario</string>
    <string name="select_scenario">Select Scenario</string>
    <string name="select_immunization_plan">Select Immunization Plan</string>
    <string name="scenario_creation_prompt">How many new fridges to allocate?</string>
    <string name="action_view_simulation_map">View Simulation Map</string>
    <string name="action_view_before_after">View Before/After Comparison</string>

    <!-- Actions -->
    <string name="send">Send</string>
    <string name="go">Go</string>
    <string name="action_next">Next</string>

    <!-- Overall Statistics -->
    <string name="total_number_fridges">Total Number Fridges</string>
    <string name="facilities_needing_attention">Facilities Needing Attention</string>
    <string name="total_population">Total Population</string>
    <string name="total_population_covered">Total Population Covered</string>
    <string name="percentage_capacity">Percentage Capacity</string>
    <string name="total_required_capacity_size">Total Required Capacity Size</string>
    <string name="total_covered_capacity_size">Total Covered Capacity Size</string>

    <!-- Activity Names -->
    <string name="title_activity_select_scenario">Select Scenario</string>
    <string name="title_activity_select_immunization_plan">Select Immunization Plan</string>
    <string name="title_activity_create_immunization_plan">Create Immunization Plan</string>
    <string name="title_activity_create_scenario">Create Scenario</string>
    <string name="title_activity_scenario_creation">Resource Allocation Scenario</string>
    <string name="title_activity_factory_list">Factory List</string>
    <string name="title_activity_facility_list">Facility List</string>
    <string name="title_activity_facility">Facility</string>
    <string name="title_activity_visualization">Simulation of Fridge Allocation</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_exploration">Exploration</string>
    <string name="title_activity_facilities_list">Facilities List</string>
    <string name="title_activity_punjab_bar_graph">Capacity Met of Punjab Districts - Bar Graph</string>
    <string name="title_activity_urgent_need_bar_graph">Facilities with Capacity Met - Bar Graph</string>
    <string name="title_activity_overall_statistics">Overall Statistics</string>
    <string name="title_activity_fridge_age_bar_graph">Breakdown of Fridge Ages - Bar Graph</string>
    <string name="title_activity_import_cold_chain">Import Cold Chain</string>
    <string name="title_activity_expandable_list_adapter_urgent">ExpandableListAdapterUrgent</string>
    <string name="title_activity_visualization_before_after">Before and After Fridge Allocation</string>
    <string name="title_activity_exploration_map">Visualize Current State of Pakistan</string>
    <string name="hello_blank_fragment"></string>

</resources>