<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/total_number_fridges"
            android:padding="3dip" />
        <TextView
            android:id="@+id/overallStatsTotalFacilities"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/facilities_needing_attention"
            android:padding="3dip" />
        <TextView
            android:id="@+id/overallStatsAttentionNeedFacilities"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/total_population"
            android:padding="3dip" />
        <TextView
            android:id="@+id/overallStatsTotalPopulation"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/total_population_covered"
            android:padding="3dip" />
        <TextView
            android:id="@+id/overallStatsCoveredPopulation"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/percentage_capacity"
            android:padding="3dip" />
        <TextView
            android:id="@+id/percentageCapacity"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/total_required_capacity_size"
            android:padding="3dip" />
        <TextView
            android:id="@+id/totalRequiredCapacitySize"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/total_covered_capacity_size"
            android:padding="3dip" />
        <TextView
            android:id="@+id/totalCoveredCapacitySize"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
</TableLayout>