<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dashtricks.pakistan.app.ScenarioCreationActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:text="@string/new_fridges"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="fridge type 1"
                android:padding="3dip" />
            <TextView
                android:text="count"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="fridge type 2"
                android:padding="3dip" />
            <TextView
                android:text="count"
                android:gravity="right"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/immunization_plans"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="immunization plan 1"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="immunization plan 2"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/button"
        android:onClick="visualize"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true" />
</RelativeLayout>